<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/tvRateHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_rating_matters"
        android:textSize="26sp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <RadioGroup
        android:id="@+id/rgRatios"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="25dp"
        app:layout_constraintTop_toBottomOf="@+id/tvRateHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <RadioButton
            android:id="@+id/rbExcellent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/excellent"/>
        <RadioButton
            android:id="@+id/rbVeryGood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/very_good"/>
        <RadioButton
            android:id="@+id/rbGood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good"/>
        <RadioButton
            android:id="@+id/rbSatisfactory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/satisfactory"/>
        <RadioButton
            android:id="@+id/rbPoor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/poor"/>
    </RadioGroup>
    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:backgroundTint="@color/red"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/rgRatios"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/rgRatios"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="25dp"/>
    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:backgroundTint="@color/blue"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/rgRatios"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/rgRatios"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>